--- a/model/model-impl/pom.xml
+++ b/model/model-impl/pom.xml
@@ -46,7 +46,11 @@
 		<developerConnection>scm:git:git://git.evolveum.com/midpoint.git</developerConnection>
 		<url>https://fisheye.evolveum.com/midpoint/</url>
 	</scm>
-	<dependencies>
+	<dependencies><dependency>
+        <groupId>com.evolveum.midpoint.model</groupId>
+        <artifactId>report-api</artifactId>
+        <version>2.3-SNAPSHOT</version>
+    </dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.model</groupId>
 			<artifactId>model-api</artifactId>
