--- a/model/report-impl/pom.xml
+++ b/model/report-impl/pom.xml
@@ -47,6 +47,11 @@
 		<url>https://fisheye.evolveum.com/midpoint/</url>
 	</scm>
 	<dependencies>
+        <dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>report-api</artifactId>
+            <version>2.3-SNAPSHOT</version>
+        </dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.model</groupId>
 			<artifactId>model-api</artifactId>
