--- a/model/report-api/pom.xml
+++ b/model/report-api/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>model-api</artifactId>
 			<version>2.3-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.evolveum.midpoint.tools</groupId>
+			<artifactId>test-ng</artifactId>
+			<version>2.3-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 	<profiles>
 		<profile>
