--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -231,7 +231,12 @@
             <version>2.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
-
+		<dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>report-impl</artifactId>
+            <version>2.3-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
         <!-- SPRING -->
         <dependency>
             <groupId>org.springframework</groupId>
