ReportsUI improvements. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -97,7 +97,7 @@ PageAdmin.menu.top.serverTasks=Server tasks
 PageAdmin.menu.top.serverTasks.list=List tasks
 PageAdmin.menu.top.serverTasks.new=New task
 PageAdmin.menu.top.reports=Reports
-PageAdmin.menu.top.reports.list=List reports
+PageAdmin.menu.top.reports.list=New Report
 PageAdmin.menu.top.reports.created=Created reports
 PageAdmin.menu.top.configuration=Configuration
 PageAdmin.menu.top.configuration.bulkActions=Bulk actions
