--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
@@ -14,7 +14,8 @@
 # limitations under the License.
 #
 
-page.title=Reports
+page.title=New Report
+page.subTitle=from midPoint
 
 PageReports.message.jasperError=Error occurred during creating Jasper report.
 PageReports.message.unknownReport=Unknown report.
