SingleButtonRowComponent implemented, CreatedReports page implementation iteration. Work still in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/SingleButtonRowPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/SingleButtonRowPanel.properties
@@ -14,11 +14,4 @@
 # limitations under the License.
 #
 
-page.title=Created Reports
-page.subTitle=in past
-
-pageCreatedReports.table.name=Name
-pageCreatedReports.table.description=Description
-pageCreatedReports.table.author=Author
-pageCreatedReports.table.time=Time
-pageCreatedReports.table.filetype=File Type
+SingleButtonRowPanel.button.default=Download
