provisioning self test (GUI)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
@@ -34,4 +34,5 @@ PageAbout.repoDiag.repositoryUrl=Repository URL
 PageAbout.repoDiag.additionalDetails.name=Name
 PageAbout.repoDiag.additionalDetails.value=Value
 PageAbout.button.testRepository=Repository self test
+PageAbout.button.testProvisioning=Provisioning self test
 PageAbout.allRightsReserved=&copy;2013 Evolveum. All Rights Reserved.
