--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -436,6 +436,7 @@ operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.focus.UserType
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.projection.ShadowType=Execute shadow delta (Model)
 
 operation.com.evolveum.midpoint.model.api.ModelDiagnosticService.repositorySelfTest=Repository self test (Model)
+operation.com.evolveum.midpoint.model.api.ModelDiagnosticService.provisioningSelfTest=Provisioning self test (Model)
 operation.com.evolveum.midpoint.model.controller.ModelDiagController.repositorySelfTest.user.getObject=Get object (Model)
 operation.com.evolveum.midpoint.model.controller.ModelDiagController.repositorySelfTest.user.searchObjects.fullName=Search objects - fullName (Model)
 operation.com.evolveum.midpoint.model.controller.ModelDiagController.repositorySelfTest.user.searchObjects.employeeType=Search objects - employeeType (Model)
