Reports UI implementation. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
@@ -22,3 +22,23 @@ pageCreatedReports.table.description=Description
 pageCreatedReports.table.author=Author
 pageCreatedReports.table.time=Time
 pageCreatedReports.table.filetype=File Type
+
+pageCreatedReports.filter.filetype=File Type
+pageCreatedReports.filter.default=Choose File Type
+
+filterForm.filetype.null=Select file type
+
+ExportType.PDF=PDF
+ExportType.CSV=CSV
+ExportType.XML=XML
+ExportType.XML_EMBED=XML_EMBED
+ExportType.HTML=HTML
+ExportType.RTF=RTF
+ExportType.XLS=XLS
+ExportType.ODT=ODT
+ExportType.ODS=ODS
+ExportType.DOCX=DOCX
+ExportType.XLSX=XLSX
+ExportType.PPTX=PPTX
+ExportType.XHTML=XHTML
+ExportType.JXL=JXL
