--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Sat Oct 12 17:23:53 CEST 2013
+#Fri Jan 10 12:26:48 CET 2014
 PageAdmin.menu.top.configuration=Configuration
 PageAdmin.menu.top.configuration.about=About
 PageAdmin.menu.top.configuration.basic=Basic
@@ -7,9 +7,11 @@ PageAdmin.menu.top.configuration.configuration=Configuration
 PageAdmin.menu.top.configuration.development=Development
 PageAdmin.menu.top.configuration.expressionEvaluator=Expression evaluator
 PageAdmin.menu.top.configuration.importObject=Import object
+PageAdmin.menu.top.configuration.logging=Logging
 PageAdmin.menu.top.configuration.repositoryObjects=Repository objects
 PageAdmin.menu.top.configuration.security=Security
 PageAdmin.menu.top.configuration.shadowsDetails=Shadows details
+PageAdmin.menu.top.configuration.timeTest=Time test
 PageAdmin.menu.top.home=Home
 PageAdmin.menu.top.reports=Reports
 PageAdmin.menu.top.reports.created=Created reports
@@ -32,6 +34,9 @@ PageAdmin.menu.top.users.org.new=New organization
 PageAdmin.menu.top.users.org.tree=Organization tree
 PageAdmin.menu.top.workItems=Work items
 PageAdmin.menu.top.workItems.list=List work items
+PageAdmin.menu.top.workItems.listProcessInstancesAll=All requests
+PageAdmin.menu.top.workItems.listProcessInstancesRequestedBy=My requests
+PageAdmin.menu.top.workItems.listProcessInstancesRequestedFor=Requests about me
 pageAdmin.configuration=Configuration
 pageAdmin.configuration.description=Security, logging, import
 pageAdmin.home=Home
@@ -66,7 +71,9 @@ pageTasks.category.ImportFromFile=Import from file
 pageTasks.category.ImportingAccounts=Importing accounts
 pageTasks.category.LiveSynchronization=Live synchronization
 pageTasks.category.Reconciliation=Reconciliation
+pageTasks.category.Report=Report
 pageTasks.category.System=System
 pageTasks.category.UserRecomputation=User recomputation
 pageTasks.category.Workflow=Workflow
+pageTasks.category.null=(undefined)
 pageTasks.runsContinually=runs continually
