--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Wed Jan 01 11:41:42 CET 2014
+#Fri Jan 10 12:26:48 CET 2014
 ActivationStatusType.ARCHIVED=Archived
 ActivationStatusType.DISABLED=Disabled
 ActivationStatusType.ENABLED=Enabled
@@ -146,6 +146,7 @@ operation.com.evolveum.midpoint.common.validator.Validator.objectBasicsCheck=Bas
 operation.com.evolveum.midpoint.common.validator.Validator.resourceNamespaceCheck=Resource namespace check
 operation.com.evolveum.midpoint.common.validator.Validator.validateSchema=Schema validation
 operation.com.evolveum.midpoint.model.ChangeExecutor.executeChanges=Execute changes - change executor (Model)
+operation.com.evolveum.midpoint.model.api.ModelDiagnosticService.provisioningSelfTest=Provisioning self test (Model)
 operation.com.evolveum.midpoint.model.api.ModelDiagnosticService.repositorySelfTest=Repository self test (Model)
 operation.com.evolveum.midpoint.model.api.ModelInteractionService.previewChanges=Preview changes (Model)
 operation.com.evolveum.midpoint.model.api.ModelService.addObject=Add object (Model)
@@ -197,9 +198,6 @@ operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute=Execute (Model
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.focus.UserType=Execute user delta (Model)
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.projection.ShadowType=Execute shadow delta (Model)
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.executeDelta=Execute delta (Model)
-operation.linkShadow=Link account (Model)
-operation.unlinkShadow=Unlink account (Model)
-operation.updateSituationInShadow=Update situation in account (Model)
 operation.com.evolveum.midpoint.model.lens.projector.ContextLoader.checkProjectionContexts=Check projection contexts (Model)
 operation.com.evolveum.midpoint.model.lens.projector.InboundProcessor.processInbound=Process inbound (Model)
 operation.com.evolveum.midpoint.model.lens.projector.Projector.project=Project (Model)
@@ -371,12 +369,15 @@ operation.com.evolveum.midpoint.xml.ns._public.model.model_1_wsdl.ModelPortType.
 operation.com.evolveum.midpoint.xml.ns._public.model.model_1_wsdl.ModelPortType.modifyObject=Model web service modify object
 operation.com.evolveum.midpoint.xml.ns._public.model.model_1_wsdl.ModelPortType.searchObjects=Model web service search objects
 operation.com.evolveum.midpoint.xml.ns._public.model.model_1_wsdl.ModelPortType.testResource=Model web service test resource
+operation.linkShadow=Link account (Model)
 operation.org.identityconnectors.framework.api.ConnectorFacade.addAttributeValues=Add attribute values (Icf)
 operation.org.identityconnectors.framework.api.ConnectorFacade.create=Create (Icf)
 operation.org.identityconnectors.framework.api.ConnectorFacade.delete=Delete object (ICF)
 operation.org.identityconnectors.framework.api.ConnectorFacade.getObject=ICF get object
 operation.org.identityconnectors.framework.api.ConnectorFacade.schema=ICF schema
 operation.org.identityconnectors.framework.api.ConnectorFacade.update=Update (Icf)
+operation.unlinkShadow=Unlink account (Model)
+operation.updateSituationInShadow=Update situation in account (Model)
 web.security.provider.access.denied=Access denied. You don't have permission to access, please contact midPoint's administrators.
 web.security.provider.denied=Permission denied.
 web.security.provider.disabled=User is disabled.
