--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Mon Dec 09 19:46:55 CET 2013
+#Fri Jan 10 12:27:06 CET 2014
 PageAdmin.menu.top.configuration=Configuration
 PageAdmin.menu.top.configuration.about=About
 PageAdmin.menu.top.configuration.basic=Basic
@@ -71,6 +71,7 @@ pageTasks.category.ImportFromFile=Import from file
 pageTasks.category.ImportingAccounts=Importing accounts
 pageTasks.category.LiveSynchronization=Live synchronization
 pageTasks.category.Reconciliation=Reconciliation
+pageTasks.category.Report=Report
 pageTasks.category.System=System
 pageTasks.category.UserRecomputation=User recomputation
 pageTasks.category.Workflow=Workflow
