--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageReports_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageReports_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Thu May 30 10:05:25 CEST 2013
+#Fri Jan 10 12:27:06 CET 2014
 PageReports.message.jasperError=Error occurred during creating Jasper report.
 PageReports.message.resourceNotDefined=Resource not defined.
 PageReports.message.unknownReport=Unknown report.
@@ -12,4 +12,5 @@ PageReports.table.description=Description
 PageReports.table.name=Name
 PageReports.title.auditPopup=Audit report parameters
 PageReports.title.reconciliationPopup=Reconciliation report parameters
+page.subTitle=from midPoint
 page.title=Reports
