--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageReports_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageReports_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Sat Oct 12 17:23:53 CEST 2013
+#Fri Jan 10 12:26:48 CET 2014
 PageReports.message.jasperError=Error occurred during creating Jasper report.
 PageReports.message.resourceNotDefined=Resource not defined.
 PageReports.message.unknownReport=Unknown report.
@@ -12,4 +12,5 @@ PageReports.table.description=Description
 PageReports.table.name=Name
 PageReports.title.auditPopup=Audit report parameters
 PageReports.title.reconciliationPopup=Reconciliation report parameters
+page.subTitle=from midPoint
 page.title=Reports
