--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -72,6 +72,7 @@ pageTasks.category.UserRecomputation=User recomputation
 pageTasks.category.Workflow=Workflow
 pageTasks.category.Cleanup=Cleanup
 pageTasks.category.System=System
+pageTasks.category.Report=Report
 pageTasks.category.null=(undefined)
 
 PageAdmin.menu.top.home=Home
