minor improvements for system configuration

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
@@ -55,8 +55,8 @@ LoggingConfigPanel.logger.TASKMANAGER=Task manager logger
 LoggingConfigPanel.logger.RESOURCEOBJECTCHANGELISTENER=Resource object change listener logger
 
 LoggingConfigPanel.profiling.general=Profiling
-LoggingConfigPanel.profiling.requestFilter=Request Filter:
-LoggingConfigPanel.profiling.performanceStatistics=Performance Statistics:
+LoggingConfigPanel.profiling.requestFilter=Request Filter
+LoggingConfigPanel.profiling.performanceStatistics=Performance Statistics
 LoggingConfigPanel.profiling.subsystems=Profiling subsystems
 LoggingConfigPanel.profiling.subsystem.model=Model
 LoggingConfigPanel.profiling.subsystem.repository=Repository
@@ -65,7 +65,7 @@ LoggingConfigPanel.profiling.subsystem.ucf=Ucf
 LoggingConfigPanel.profiling.subsystem.resourceObjectChangeListener=Resource Object Change Listener
 LoggingConfigPanel.profiling.subsystem.taskManager=Task Manager
 LoggingConfigPanel.profiling.subsystem.workflow=Workflow
-LoggingConfigPanel.profiling.dumpInterval=Dump interval:
+LoggingConfigPanel.profiling.dumpInterval=Dump interval
 LoggingConfigPanel.profiling.dumpInterval.placeholder=Dump interval
 LoggingConfigPanel.profiling.entryExit=Profiling entry/exit
 
