implemented provisioning self test in gui

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/help/PageSystem.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/help/PageSystem.properties
@@ -27,6 +27,7 @@ pageSystem.unknownBuildNumber=unknown
 pageSystem.title.basic=Basic system properties
 pageSystem.title.repository=Repository
 pageSystem.button.testRepository=Repository self test
+pageSystem.button.testProvisioning=Provisioning self test
 pageSystem.title.repository.additional=Additional details
 pageSystem.repoDiag.implementationShortName=Implementation name
 pageSystem.repoDiag.implementationDescription=Implementation description
