--- a/model/model-common/pom.xml
+++ b/model/model-common/pom.xml
@@ -48,6 +48,11 @@
 	</scm>
 	<dependencies>
 		<dependency>
+			<groupId>com.evolveum.midpoint.model</groupId>
+			<artifactId>model-api</artifactId>
+			<version>2.3-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>util</artifactId>
 			<version>2.3-SNAPSHOT</version>
