Reports UI implementation update. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
@@ -24,6 +24,10 @@ pageCreatedReports.table.type=Report Type
 pageCreatedReports.table.time=Time
 pageCreatedReports.table.filetype=File Type
 
+pageCreatedReports.inlineMenu.deleteAll=Delete All
+pageCreatedReports.inlineMenu.deleteSelected=Delete Selected
+pageCreatedReports.message.nothingSelected=No reports have been selected.
+
 pageCreatedReports.filter.filetype=File Type
 pageCreatedReports.filter.reportType=Report Type
 pageCreatedReports.filter.default=Choose File Type
