--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.properties
@@ -17,3 +17,4 @@
 AuditPopupPanel.dateFrom=From
 AuditPopupPanel.dateTo=To
 AuditPopupPanel.auditEventType=Event Type
+AuditPopupPanel.descriptionPlaceholder=Description
