--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 									<pluginExecutionFilter>
 										<groupId>org.codehaus.mojo</groupId>
 										<artifactId>aspectj-maven-plugin</artifactId>
-										<versionRange>[1.0,)</versionRange>
+										<versionRange>[1.6,)</versionRange>
 										<goals>
 											<goal>test-compile</goal>
 											<goal>compile</goal>
@@ -114,6 +114,19 @@
 										<versionRange>[2.4.3,)</versionRange>
 										<goals>
 											<goal>wsdl2java</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>com.lukegb.mojo</groupId>
+										<artifactId>gitdescribe-maven-plugin</artifactId>
+										<versionRange>[1.3,)</versionRange>
+										<goals>
+											<goal>gitdescribe</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
