Report UI implementation update. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
@@ -20,6 +20,7 @@ pageBase.unknownBuildNumber=unknown
 PageBase.button.save=Save
 PageBase.button.back=Back
 PageBase.button.cancel=Cancel
+PageBase.button.saveAndRun=Save & Run
 PageBase.button.run=Run
 PageBase.button.delete=Delete
 PageBase.clearCssCache=Clear less/js cache
