--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
@@ -13,9 +13,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
-AuditPopupPanel.dateFrom=From
-AuditPopupPanel.dateTo=To
-AuditPopupPanel.auditEventType=Event Type
-AuditPopupPanel.descriptionPlaceholder=Description
-AuditPopupPanel.exportTypePlaceholder=Export File Type
+pageReport.title=Edit report
