--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
@@ -32,6 +32,7 @@ PageReports.table.description=Description
 
 PageReports.title.auditPopup=Audit report parameters
 PageReports.title.reconciliationPopup=Reconciliation report parameters
+PageReports.title.userPopup=User report parameters
 
 PageReports.message.resourceNotDefined=Resource not defined.
 
