--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel.properties
@@ -16,3 +16,4 @@
 
 ReconciliationPopupPanel.resource=Resource
 ReconciliationPopupPanel.descriptionPlaceholder=Description
+ReconsiliationPopupPanel.exportFileType=Export File Type
