--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -98,6 +98,20 @@ AuditEventType.WORK_ITEM=Work item
 AuditEventType.WORKFLOW_PROCESS_INSTANCE=Workflow process instance
 AuditEventType.RECONCILIATION=Reconciliation
 
+ExportType.PDF=PDF
+ExportType.CSV=CSV
+ExportType.XML=XML
+ExportType.XML_EMBED=XML_EMBED
+ExportType.HTML=HTML
+ExportType.RTF=RTF
+ExportType.XLS=XLS
+ExportType.ODT=ODT
+ExportType.ODS=ODS
+ExportType.DOCX=DOCX
+ExportType.XLSX=XLSX
+ExportType.PPTX=PPTX
+ExportType.XHTML=XHTML
+ExportType.JXL=JXL
 
 LoggingLevelType.ALL=All
 LoggingLevelType.ERROR=Error
