--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/UserReportConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/UserReportConfigPanel.properties
@@ -14,8 +14,7 @@
 # limitations under the License.
 #
 
-AuditPopupPanel.dateFrom=From
-AuditPopupPanel.dateTo=To
-AuditPopupPanel.auditEventType=Event Type
-AuditPopupPanel.descriptionPlaceholder=Description
-AuditPopupPanel.exportTypePlaceholder=Export File Type
+UserReportConfigPanel.dateFrom=From
+UserReportConfigPanel.dateTo=To
+UserReportConfigPanel.description=Description
+UserReportConfigPanel.exportFileType=Export File Type
