Extending orgsync story test. Some prism factory method cleanup.

--- a/testing/story/pom.xml
+++ b/testing/story/pom.xml
@@ -16,7 +16,7 @@
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<name>midPoint Testing - Long Tests</name>
+	<name>midPoint Testing - Story Tests</name>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.evolveum.midpoint.testing</groupId>
 	<artifactId>story</artifactId>
