Small fixes on SystemConfigPage - AEP chooser now correctly shows default AEP value. Added checkbox "Redirect to file" to Notification Configuration

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageSystemConfiguration.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageSystemConfiguration.properties
@@ -18,9 +18,10 @@ page.subTitle=for midPoint
 pageSystemConfiguration.system.title=System
 pageSystemConfiguration.logging.title=Logging
 
+mainForm.tabPanel.panel.aepChooser.null=Relative (Default)
 pageSystemConfiguration.assignmentPolicyEnforcement.value.none=None
 pageSystemConfiguration.assignmentPolicyEnforcement.value.positive=Positive
-pageSystemConfiguration.assignmentPolicyEnforcement.value.legalize=Legalize
+pageSystemConfiguration.assignmentPolicyEnforcement.value.legalize=Relative
 pageSystemConfiguration.assignmentPolicyEnforcement.value.mark=Mark
 pageSystemConfiguration.assignmentPolicyEnforcement.value.full=Full
 AEPlevel.NONE=None
