--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
@@ -32,3 +32,4 @@ SystemConfigPanel.mail.port=Port
 SystemConfigPanel.mail.username=Username
 SystemConfigPanel.mail.password=Password
 SystemConfigPanel.mail.transportSecurity=Transport security
+SystemConfigPanel.notification.redirectToFile=Redirect to file
