Report UI implementation update. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/DefaultReportPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/DefaultReportPanel.properties
@@ -13,10 +13,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
-AuditPopupPanel.dateFrom=From
-AuditPopupPanel.dateTo=To
-AuditPopupPanel.auditEventType=Event Type
-AuditPopupPanel.title=Audit Report Basic Configuration
-AuditPopulPanel.exportType.label=Export File Type
-
+defaultReportPanel.title.basic=Basic Report Configuration
+defaultReportPanel.exportType.label=Export Type
