--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel.properties
@@ -14,6 +14,6 @@
 # limitations under the License.
 #
 
+ReconciliationPopupPanel.title.basic=Basic Reconciliation Report Configuration
 ReconciliationPopupPanel.resource=Resource
-ReconciliationPopupPanel.descriptionPlaceholder=Description
-ReconsiliationPopupPanel.exportFileType=Export File Type
+ReconciliationPopupPanel.exportFileType=Export Type
