--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/UserReportConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/UserReportConfigPanel.properties
@@ -13,8 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
+UserReportConfigPanel.title.basic=Basic User Report Configuration
 UserReportConfigPanel.dateFrom=From
 UserReportConfigPanel.dateTo=To
-UserReportConfigPanel.description=Description
-UserReportConfigPanel.exportFileType=Export File Type
+UserReportConfigPanel.exportFileType=Export Type
