--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
@@ -14,3 +14,6 @@
 # limitations under the License.
 #
 pageReport.title=Edit report
+
+pageReport.tab.aceEditor=XML report configuration
+pageReport.tab.panelConfig=Wizard report configuration
