added jvm params to about page, updated icons on dashboard page.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
@@ -25,6 +25,7 @@ PageAbout.title.basic=Basic
 PageAbout.title.systemProperties=System properties
 PageAbout.title.repository=Repository
 PageAbout.title.repository.additional=Additional details
+PageAbout.title.jvmProperties=JVM properties
 PageAbout.repoDiag.implementationShortName=Implementation name
 PageAbout.repoDiag.implementationDescription=Implementation description
 PageAbout.repoDiag.isEmbedded=Is embedded
@@ -36,3 +37,4 @@ PageAbout.repoDiag.additionalDetails.value=Value
 PageAbout.button.testRepository=Repository self test
 PageAbout.button.testProvisioning=Provisioning self test
 PageAbout.allRightsReserved=&copy;2014 Evolveum. All Rights Reserved.
+PageAbout.message.couldntObtainJvmParams=Couldn't obtain JVM parameters from JMX.
