updated design on work item details page.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-page.title=Work Item details
+page.subTitle=work item details
 pageWorkItem.description=Work Item
 pageWorkItem.requester.description=Requester
 pageWorkItem.accordionLabel.requester=Requester (technical information)
@@ -25,6 +25,8 @@ pageWorkItem.accordionLabel.objectNew=Object after proposed change (technical in
 pageWorkItem.additionalData.description=Related data
 pageWorkItem.accordionLabel.additionalData=Related data (technical information)
 pageWorkItem.accordionLabel.processInstance=Process instance information
+pageWorkItem.requestSpecifics=Request specifics
+pageWorkItem.trackingData=Tracking data
 
 pageWorkItem.trackingData.description=Tracking (diagnostic) data
 pageWorkItem.requestCommon.description=General information about the request
