resource wizard menu fix.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -89,6 +89,7 @@ PageAdmin.menu.top.roles.new=New role
 PageAdmin.menu.top.resources=Resources
 PageAdmin.menu.top.resources.list=List resources
 PageAdmin.menu.top.resources.new=New Resource
+PageAdmin.menu.top.resources.wizard=Resource wizard
 PageAdmin.menu.top.workItems=Work items
 PageAdmin.menu.top.workItems.list=My work items
 PageAdmin.menu.top.workItems.listProcessInstancesAll=All requests
