--- a/infra/prism/pom.xml
+++ b/infra/prism/pom.xml
@@ -46,15 +46,40 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
-        <dependency>
-	<groupId>org.codehaus.jackson</groupId>
-	<artifactId>jackson-core-asl</artifactId>
-	<version>1.9.13</version>
+<!--         <dependency> -->
+<!-- 	<groupId>org.codehaus.jackson</groupId> -->
+<!-- 	<artifactId>jackson-core-asl</artifactId> -->
+<!-- 	<version>1.9.13</version> -->
+<!-- </dependency> -->
+<!--             <dependency> -->
+<!-- 	<groupId>org.codehaus.jackson</groupId> -->
+<!-- 	<artifactId>jackson-mapper-asl</artifactId> -->
+<!-- 	<version>1.9.13</version> -->
+<!-- </dependency> -->
+<!-- <dependency> -->
+<!--   <groupId>com.fasterxml.jackson.module</groupId> -->
+<!--   <artifactId>jackson-module-jaxb-annotations</artifactId> -->
+<!--   <version>2.0.5</version> -->
+<!-- </dependency> -->
+<dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-core</artifactId>
+  <version>2.3.1</version>
 </dependency>
-            <dependency>
-	<groupId>org.codehaus.jackson</groupId>
-	<artifactId>jackson-mapper-asl</artifactId>
-	<version>1.9.13</version>
+<dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-annotations</artifactId>
+  <version>2.3.0</version>
+</dependency>
+<dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-databind</artifactId>
+  <version>2.3.1</version>
+</dependency>
+<dependency>
+  <groupId>com.fasterxml.jackson.module</groupId>
+  <artifactId>jackson-module-jaxb-annotations</artifactId>
+  <version>2.2.0</version>
 </dependency>
             
         <!-- TEST -->
