Report UI implementation update. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
@@ -27,6 +27,7 @@ pageCreatedReports.table.filetype=File Type
 pageCreatedReports.inlineMenu.deleteAll=Delete All
 pageCreatedReports.inlineMenu.deleteSelected=Delete Selected
 pageCreatedReports.message.nothingSelected=No reports have been selected.
+pageCreatedReports.message.deleteOutputConfirmed=Do you really want to delete selected {0} Created report(s)?
 
 pageCreatedReports.filter.filetype=File Type
 pageCreatedReports.filter.reportType=Report Type
@@ -43,6 +44,8 @@ SearchType.AUTHOR=Author
 pageCreatedReports.button.download=Download
 pageCreatedReports.button.delete=Delete
 pageCreatedReports.button.searchButton=Search
+
+pageCreatedReports.dialog.title.confirmDelete=Confirm Delete
 
 Type.USERS=User
 Type.RECONCILIATION=Reconciliation
