Report UI update. Some minor layout fixes and small bugs. Valid ReportType example added.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
@@ -18,3 +18,4 @@ pageReport.title=Edit report
 pageReport.tab.aceEditor=XML report configuration
 pageReport.tab.panelConfig=Wizard report configuration
 pageReport.message.emptyXml=Can't save empty XML as report.
+pageReport.message.editWarning=For report editing, please use XML tab. Editing via forms will be available soon.
