--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -99,7 +99,7 @@ PageAdmin.menu.top.serverTasks=Server tasks
 PageAdmin.menu.top.serverTasks.list=List tasks
 PageAdmin.menu.top.serverTasks.new=New task
 PageAdmin.menu.top.reports=Reports
-PageAdmin.menu.top.reports.list=New Report
+PageAdmin.menu.top.reports.list=Reports
 PageAdmin.menu.top.reports.created=Created reports
 PageAdmin.menu.top.configuration=Configuration
 PageAdmin.menu.top.configuration.bulkActions=Bulk actions
