--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
@@ -28,6 +28,8 @@ pageCreatedReports.inlineMenu.deleteAll=Delete All
 pageCreatedReports.inlineMenu.deleteSelected=Delete Selected
 pageCreatedReports.message.nothingSelected=No reports have been selected.
 pageCreatedReports.message.deleteOutputConfirmed=Do you really want to delete selected {0} Created report(s)?
+pageCreatedReports.message.deleteOutputSingle=Do you really want to delete Created report '{0}'?
+pageCreatedReports.message.deleteAll=Do you really want to delete all created report outputs?
 
 pageCreatedReports.filter.filetype=File Type
 pageCreatedReports.filter.reportType=Report Type
