Report UI update - search functionallity and date ordering implemented. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
@@ -30,6 +30,7 @@ pageCreatedReports.message.nothingSelected=No reports have been selected.
 pageCreatedReports.message.deleteOutputConfirmed=Do you really want to delete selected {0} Created report(s)?
 pageCreatedReports.message.deleteOutputSingle=Do you really want to delete Created report '{0}'?
 pageCreatedReports.message.deleteAll=Do you really want to delete all created report outputs?
+pageCreatedReports.message.queryError=Error occurred during translation search query to filter.
 
 pageCreatedReports.filter.filetype=File Type
 pageCreatedReports.filter.reportType=Report Type
