--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -183,6 +183,11 @@
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>report-api</artifactId>
+            <version>2.3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>model-api</artifactId>
             <version>2.3-SNAPSHOT</version>
         </dependency>
