--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
@@ -18,6 +18,8 @@ pageTaskEdit.title.edit=Details for '{0}'
 pageTaskEdit.button.back=Back
 pageTaskEdit.button.save=Save
 pageTaskEdit.button.edit=Edit
+pageTaskEdit.button.resume=Resume
+pageTaskEdit.button.suspend=Suspend
 
 pageTaskEdit.basic=Basic
 pageTaskEdit.name=Task name
@@ -41,6 +43,7 @@ pageTaskEdit.misfire=Misfire action
 pageTaskEdit.lastStarted=Task run last started
 pageTaskEdit.lastFinished=Task run last finished
 pageTaskEdit.nextRun=Next scheduled task run
+pageTaskEdit.threadAction=Thread action
 
 pageTaskEdit.tightlyBound=Tightly bound
 pageTaskEdit.runUntilNodeDown=Run only until node down
