--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
@@ -31,6 +31,8 @@ pageResources.connector.port=Port
 pageResources.connector.timeout=Timeout
 pageResources.connector.protectConnection=Protected
 pageResources.button.discoveryRemote=Discovery
+pageResources.button.search=Search
+pageResources.searchText.placeholder=Name
 
 pageResources.message.deleteResourceConfirm=Do you really want to delete resource '{0}'?
 pageResources.message.deleteResourcesConfirm=Do you really want to delete {0} resources?
@@ -38,4 +40,5 @@ pageResources.message.deleteHostConfirm=Do you really want to delete host '{0}'?
 pageResources.message.deleteHostsConfirm=Do you really want to delete {0} hosts?
 pageResources.message.noResourceSelected=No resource has been selected.
 pageResources.message.noHostSelected=No connector host has been selected.
+pageResources.message.queryError=Error occurred during translation search query to filter.
 pageResources.dialog.title.confirmDelete=Confirm delete
