MID-1722 - support for searching in roles. (PageRoles)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRoles.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRoles.properties
@@ -16,8 +16,13 @@
 
 page.title=List roles
 pageRoles.name=Name
+pageRoles.requestableAll=All
+pageRoles.nonRequestable=Non Requestable
+pageRoles.requestable=Requestable
 pageRoles.description=Description
 pageRoles.button.delete=Delete
+pageRoles.button.search=Search
 pageRoles.message.deleteRoleConfirm=Do you really want to delete selected {0} role(s)?
 pageRoles.message.nothingSelected=No role has been selected.
+pageRoles.message.queryError=Error occurred during translation search query to filter.
 pageRoles.dialog.title.confirmDelete=Confirm delete
