MID-598 - delete act. sync token implemented on PageResource and PageResources.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResource.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResource.properties
@@ -32,6 +32,7 @@ pageResource.conConnection=Connector connection
 pageResource.conSanity=Connector sanity
 pageResource.conSchema=Connector schema
 pageResource.editResource=Edit resource
+pageResource.deleteSyncToken=Delete Sync. Token
 
 pageResource.capabilities=Capabilities
 
@@ -47,3 +48,4 @@ pageResource.button.test=Test connection
 pageResource.button.importAccounts=Import accounts
 
 pageResource.message.oidNotDefined=Resource oid not defined in request.
+pageResource.message.invalidTaskSearch=Synchronization task search did not perform correctly.
