--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
@@ -30,6 +30,7 @@ pageResources.connector.hostname=Hostname
 pageResources.connector.port=Port
 pageResources.connector.timeout=Timeout
 pageResources.connector.protectConnection=Protected
+pageResources.inlineMenuItem.deleteSyncToken=Delete Sync. Token
 pageResources.button.discoveryRemote=Discovery
 pageResources.button.search=Search
 pageResources.searchText.placeholder=Name
