--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/CapabilityStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/CapabilityStep.properties
@@ -14,3 +14,5 @@
 # limitations under the License.
 #
 WizardStep.title=Capabilities
+CapabilityStep.native=Native
+CapabilityStep.configured=Configured
