updated styles on clear search button

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
@@ -18,6 +18,7 @@ pageBase.unknownBuildNumber=unknown
 
 #most common used button names, used also in PageBase subclasses
 PageBase.button.save=Save
+PageBase.button.tooltip.clearSearch=Clear search
 PageBase.button.back=Back
 PageBase.button.cancel=Cancel
 PageBase.button.saveAndRun=Save & Run
