--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/NameStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/NameStep.properties
@@ -23,7 +23,7 @@ NameStep.connectorName=Connector name
 NameStep.connectorVersion=Connector version
 NameStep.undefinedVersion=Undefined version
 NameStep.undefinedName=Undefined name
-NameStep.connectorType=Type
+NameStep.connectorType=Connector type
 NameStep.connectorBundle=Bundle
 NameStep.connectorInformation=Information
 NameStep.connectorNotSelected=Connector was not selected.
