--- a/provisioning/provisioning-impl/pom.xml
+++ b/provisioning/provisioning-impl/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<artifactId>provisioning</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.2.1-SNAPSHOT</version>
+		<version>2.2.1</version>
 	</parent>
 	<repositories>
         	<repository>
@@ -37,28 +37,28 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>test-util</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.provisioning</groupId>
 			<artifactId>provisioning-api</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-api</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>system-init</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>task-api</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-pool</groupId>
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>audit-impl</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.1</version>
             <scope>test</scope>
         </dependency>
 		<dependency>
@@ -101,13 +101,13 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-sql-impl</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>task-quartz-impl</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -118,13 +118,13 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-test-util</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -160,13 +160,13 @@
 		<dependency>
 			<groupId>com.evolveum.icf</groupId>
 			<artifactId>dummy-connector</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.icf</groupId>
 			<artifactId>dummy-resource</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -187,7 +187,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>system-init</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
