--- a/repo/audit-api/pom.xml
+++ b/repo/audit-api/pom.xml
@@ -24,24 +24,24 @@
 	<parent>
 		<artifactId>repo</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.2.1-SNAPSHOT</version>
+		<version>2.2.1</version>
 	</parent>
 	<dependencies>
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>common</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>task-api</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.1</version>
 		</dependency>
 	</dependencies>
 </project>
