--- a/tools/xjc-plugin/pom.xml
+++ b/tools/xjc-plugin/pom.xml
@@ -19,19 +19,19 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.evolveum.midpoint.tools</groupId>
     <artifactId>xjc-plugin</artifactId>
-    <version>2.2.1-SNAPSHOT</version>
+    <version>2.2.1</version>
     <packaging>jar</packaging>
     <name>midPoint Infrastructure - xjc plugin</name>
     <parent>
         <artifactId>tools</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.1</version>
     </parent>
     <dependencies>
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>prism</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.1</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
