--- a/model/model-client/pom.xml
+++ b/model/model-client/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <artifactId>model</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.2.1</version>
+        <version>2.2.2-SNAPSHOT</version>
     </parent>
 
     <distributionManagement>
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -224,7 +224,7 @@
                     <dependency>
                         <groupId>com.evolveum.midpoint.tools</groupId>
                         <artifactId>xjc-plugin</artifactId>
-                        <version>2.2.1</version>
+                        <version>2.2.2-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
             </plugin>
