--- a/repo/repo-sql-impl/pom.xml
+++ b/repo/repo-sql-impl/pom.xml
@@ -25,23 +25,23 @@
     <parent>
         <artifactId>repo</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.2.1</version>
+        <version>2.2.2-SNAPSHOT</version>
     </parent>
     <dependencies>
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>repo-api</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>audit-api</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>common</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
 
         <!-- SPRING -->
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
