user photo design (disabled for now), MID-1665

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -190,6 +190,10 @@ OrgType.locality=Locality
 OrgType.orgType=Org. type
 FocusType.activation=Activation
 
+UserType.fullName=Full name
+UserType.givenName=Given name
+UserType.familyName=Family name
+
 ActivationType.title=Activation
 ActivationType.enabled=Enabled
 ActivationType.administrativeStatus=Administrative status
